syntax="proto3";
option java_package="org.example.stubs";
service BankService{
  //unary model
  rpc convert(ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
  //server streaming model
  rpc getCurrencyStream(ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);
  //client streaming model
  rpc performStream(stream ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
 //bidirectional streaming model
  rpc fullCurrencyStream(stream ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
}
message ConvertCurrencyRequest{
  string currencyFrom=1;
  string currencyTo=2;
  float ammount=3;
}
message ConvertCurrencyResponse{
  string currencyFrom=1;
  string currencyTo=2;
  float ammount=3;
  float result=4;
}